--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/001/g/ksm001.g.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/001/g/ksm001.g.main.css
@@ -1,10 +1,10 @@
 @CHARSET "UTF-8";
 
 .lableData {
-	margin-left: 20px;
-	width: 110px;
-	margin-top: 10px;
-	vertical-align: super;
+}
+
+.checkbox-wrapper{
+	display: flex;
 }
 
 .lableDataFull {
@@ -13,8 +13,20 @@
 	margin-top: 10px;
 }
 
-.settingColor {
-	margin-top: 25px;
+.setting {
+	margin-top: 5px;
+	margin-bottom: 25px;
+}
+
+.line{
+	border-bottom: solid grey 1px;
+	max-width: 100%;
+	height: 40px;
+}
+
+.listData{
+	margin-top: 15px;
+    margin-left: 32px;
 }
 
 .border-all td {
@@ -34,7 +46,12 @@
 
 .detailSetting {
 	margin-top: 25px;
-	height: 60px;
+	margin-left: 35px;
+}
+
+.detailSetting table td {
+	vertical-align: unset;
+	
 }
 
 .settingTime {
