--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/common/checkconditions.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/common/checkconditions.xhtml
@@ -7,7 +7,9 @@
     <com:ValidatorScript>
         nts.uk.ctx.at.record.dom.workrecord.erroralarm.primitivevalue.NameWKRecord
     </com:ValidatorScript>
-
+	<com:EnumScript>
+		nts.uk.ctx.at.function.dom.alarm.checkcondition.fourweekfourdayoff.FourW4DCheckCond
+	</com:EnumScript>
 	<div id="daily-content" data-bind="visible: category() == 5">
 		<div id="div_group_function">
 		    <table>
@@ -84,16 +86,18 @@
 		</div>
 	</div>
 	<div id="schedule4week-content" data-bind="visible: category() == 2">
-		<div data-bind="ntsRadioBoxGroup: {
+		<!-- <div data-bind="ntsRadioBoxGroup: {
 			options: itemList,
 			optionsValue: 'code',
 			optionsText: 'name',
 			value: schedule4WeekCheckCondition,
-			enable: true}"></div>
-		<br/>
-		<label>#{i18n.getText('KAL003_151')}</label>
-		<br/>
-		<label>#{i18n.getText('KAL003_152')}</label>
+			enable: true}"></div> -->
+			<div
+			data-bind="ntsRadioButton: { checked: schedule4WeekCheckCondition, option: list4weekClassEnum()[0], name: '#[KAL003_150]', optionValue: 'code', optionText: 'name', group: 'D4W4'}"></div>
+		<label class="label4w4d">#{i18n.getText('KAL003_151')}</label>
+		<div
+			data-bind="ntsRadioButton: { checked: schedule4WeekCheckCondition, option: list4weekClassEnum()[1], name: '#[KAL003_150]', optionValue: 'code', optionText: 'name', group: 'D4W4'}"></div>
+		<label class="label4w4d">#{i18n.getText('KAL003_152')}</label>
 	</div>
 
 </ui:composition>
