KSM011 - B: Add code

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/a/index.xhtml
@@ -7,9 +7,9 @@
 <body>
 	<ui:composition template="../../../../master/sidebar.xhtml">
 		<ui:define name="sidebar-head">
-<!-- 			<com:ValidatorScript> -->
-<!-- 				nts.uk.ctx.at.schedule.dom.budget.schedulevertical.verticalsetting.VerticalCalCd -->
-<!-- 			</com:ValidatorScript> -->
+			<com:ValidatorScript>
+				nts.uk.ctx.at.schedule.dom.schedule.setting.displaycontrol.PersonSymbolQualify
+			</com:ValidatorScript>
 			
 			<com:scriptfile set="IGNITE" />
 				
