--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/002/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/002/a/index.xhtml
@@ -229,7 +229,7 @@
 														optionsValue: 'id' ,
 														optionsText: 'name' ,
 														value: createTypeId ,
-														enable: false
+														enable: true
 														       		}">
 										</div>
 									</div>
