--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/d/index.xhtml
@@ -33,7 +33,7 @@
 															height: 600, 
 															freeResize: false, 
 															resizeRatio: 0.75,
-															accept: ['.png','.PNG','.jpg','.JPG', '.jpeg', '.JPEG','.bmp','.BMP', '.gif', '.GIF'] }"></div>
+															accept: ['.png','.jpg','.jpeg', '.bmp','.gif'] }"></div>
 			</div>
 			<div id="functions-area-bottom">
 				<button class="proceed x-large"
