--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/c/index.xhtml
@@ -26,8 +26,8 @@
 
 		<ui:define name="content">
 			<div id="functions-area">
-				<button type="button" class="proceed" data-bind="click: reStoreData , enable: $root.errors.isEmpty() &amp; enaBtnRes()">#{i18n.getText('CPS001_49')}</button>
-				<button type="button" class="danger" data-bind="click: deleteData , enable : $root.errors.isEmpty() &amp; enaBtnDel()">#{i18n.getText('CPS001_50')}</button>
+				<button type="button" class="proceed" data-bind="click: reStoreData , enable: enaBtnRes()">#{i18n.getText('CPS001_49')}</button>
+				<button type="button" class="danger" data-bind="click: deleteData , enable : enaBtnDel()">#{i18n.getText('CPS001_50')}</button>
 				<button type="button" data-bind="click : closeUp">#{i18n.getText('CPS001_51')}</button>
 			</div>
 			<div id="contents-area" class="cf" data-bind="let: {text: nts.uk.resource.getText}">
