--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -4,15 +4,16 @@
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 	<div class="cf" id="ccg-component" style="display: none;overflow: hidden;">
-		<div class="pull-left" style="background-color: #F2F2F2; border-radius: 5px;overflow: hidden;">
+		<div class="pull-left" style="background-color: #F2F2F2; border-radius: 5px;overflow: hidden;height:100%;">
 			<div class="control-group" style="margin-left: 5px; margin-top: 20px;overflow: hidden;">
 				<div data-bind="ntsFormLabel: {}">#{i18n.getText('CCG001_1')}</div>
 				<div id="inp_baseDate" tabindex="1" data-bind="ntsDatePicker: {dateFormat: 'YYYY/MM/DD', value: baseDate, name: '#[CCG001_1]',required: true }"></div> 
 				<button tabindex="-1" id="btn_apply" data-bind="click: applyDataSearch">#{i18n.getText('CCG001_2')}</button>
 			</div>
-		<div tabindex="2" id="tab-panel" class="ccg-tabpanel pull-left" data-bind="if: isQuickSearchTab||isAdvancedSearchTab, ntsTabPanel: { dataSource: tabs, active: selectedTab}">
+		<div tabindex="2" id="tab-panel" class="cf ccg-tabpanel pull-left"
+			data-bind="if: isQuickSearchTab||isAdvancedSearchTab, ntsTabPanel: { dataSource: tabs, active: selectedTab}">
 			<com:ko tag="if" bind="isQuickSearchTab">
-				<div tabindex="-1" class="tab-content-1 ccg_tab_content_1">
+				<div tabindex="-1" class="tab-content-1">
 					<div tabindex="3" class="btn-quick-search" data-bind="if: isAllReferableEmployee, click: searchAllEmployee">
 						<div class="flex valign-center btn_big">
 							<i class="icon icon-28-allemployee"></i>
@@ -44,73 +45,82 @@
 				</div>
 			</com:ko>
 			<com:ko tag="if" bind="isAdvancedSearchTab">
-				<div tabindex="-1" class="tab-content-2 ccg_tab_content_2">
-					<div style="padding-right: 15px">
-						<div>
-							<label>#{i18n.getText('CCG001_20')}</label>
-						</div>
-						<div tabindex="-1" class="accordion" id="EmploymentList" data-bind="ntsAccordion: {enable: true}" >
-							<h3>
-								<label>#{i18n.getText('CCG001_5')}</label>
-							</h3>
-							<div class="contentkcp">
-								<div id="employmentList" tabindex="7" style="width: 352px"></div>
-							</div>
-						</div>
-						<div tabindex="-1" class="accordion" id="ClassificationList" data-bind="ntsAccordion: {enable: true}">
-							<h3>
-								<label>#{i18n.getText('CCG001_6')}</label>
-							</h3>
-							<div class="contentkcp">
-								<div tabindex="8" id="classificationList">
+				<div tabindex="-1" class="tab-content-2" style="height: 100%">
+						<div style="height: 100%">
+							<div class="pull-left" style="padding-right: 15px; height: 100%; overflow: scroll;">
+								<div>
+									<label>#{i18n.getText('CCG001_20')}</label>
+								</div>
+								<div tabindex="-1" class="accordion" id="EmploymentList"
+									data-bind="ntsAccordion: {enable: true}">
+									<h3>
+										<label>#{i18n.getText('CCG001_5')}</label>
+									</h3>
+									<div class="contentkcp">
+										<div id="employmentList" tabindex="7" style="width: 352px"></div>
+									</div>
+								</div>
+								<div tabindex="-1" class="accordion" id="ClassificationList"
+									data-bind="ntsAccordion: {enable: true}">
+									<h3>
+										<label>#{i18n.getText('CCG001_6')}</label>
+									</h3>
+									<div class="contentkcp">
+										<div tabindex="8" id="classificationList"></div>
+									</div>
+								</div>
+								<div tabindex="-1" class="accordion" id="JoptitleList"
+									data-bind="ntsAccordion: {enable: true}">
+									<h3>
+										<label>#{i18n.getText('CCG001_7',["Com_Jobtitle"])}</label>
+									</h3>
+									<div class="contentkcp">
+										<div tabindex="9" id="jobtitleList"></div>
+									</div>
+								</div>
+								<div tabindex="-1" class="accordion" id="WorkplaceList"
+									data-bind="ntsAccordion: {enable: true}">
+									<h3>
+										<label>#{i18n.getText('CCG001_8')}</label>
+									</h3>
+									<div class="contentkcpWorkplace">
+										<div tabindex="10" id="workplaceList"></div>
+										<button tabindex="11" id="btnDetailWorkplace"
+											data-bind="click: detailWorkplace">#{i18n.getText('CCG001_9')}</button>
+									</div>
 								</div>
 							</div>
-						</div>
-						<div tabindex="-1" class="accordion" id="JoptitleList" data-bind="ntsAccordion: {enable: true}">
-							<h3>
-								<label>#{i18n.getText('CCG001_7',["Com_Jobtitle"])}</label>
-							</h3>
-							<div class="contentkcp">
-								<div tabindex="9" id="jobtitleList"></div>
+							<div class="pull-left" style="height: 100%">
+								<div tabindex="14" class="flex valign-center btn_apply"
+								data-bind="click: applyEmployee">
+									<label class="lbl-apply" style="">#{i18n.getText('CCG001_25')}</label>
+								</div>
 							</div>
+							
+							<com:ko tag="ifnot" bind="isSelectAllEmployee">
+								<div class="pull-left" style="height: 100%">
+									<div tabindex="13" class="pull-left contentkcp"
+										id="employeeinfo"></div>
+								</div>
+								<div class="pull-left" style="height: 100%">
+									<div tabindex="12"
+										class="pull-left flex valign-center btn_apply"
+										data-bind="click: searchDataEmployee">
+										<i class="icon icon-01-searchmode"></i> <label
+											class="lbl-apply" style="">#{i18n.getText('CCG001_26')}</label>
+									</div>
+								</div>
+							</com:ko>
+							<div class="cf"></div>
 						</div>
-						<div tabindex="-1" class="accordion" id="WorkplaceList" data-bind="ntsAccordion: {enable: true}">
-						<h3>
-							<label>#{i18n.getText('CCG001_8')}</label>
-						</h3>
-						<div class="contentkcpWorkplace">
-							<div tabindex="10" id="workplaceList"></div>
-							<button tabindex="11" id="btnDetailWorkplace" data-bind="click: detailWorkplace">#{i18n.getText('CCG001_9')}</button>
-						</div>
+						<div class="cf"></div>
 					</div>
-					<div data-bind="if: !isSelectAllEmployee">
-						<hr />
-						<span tabindex="12" class="caret-background caret-bottom btn_apply" data-bind="click: searchDataEmployee">
-							<i class="icon icon-01-searchmode"></i>
-							<label class="lbl-apply" style="">#{i18n.getText('CCG001_18')}</label>
-						</span>
-						<div tabindex="13" class="contentkcp" id="employeeinfo"></div>
-					</div>
-					<br/>
-					<span tabindex="14" class="btn_apply" data-bind="click: applyEmployee">
-						<label class="lbl-apply">#{i18n.getText('CCG001_19')}</label>
-					</span>
-					</div>
-				</div>
 			</com:ko>
 		</div>
 		</div>
-		<div tabindex="-1" id="hor-scroll-button-show" class="pull-left"
-			data-bind="click: showHide">
-			<div class="flex valign-center btn_showhide">
-				<i class="icon icon-01-searchmode"></i> <label
-					class="labelShowHideButton">#{i18n.getText('CCG001_21')}</label>
-			</div>
-			<span class="controlSettingShowHide caret-right"></span>
-		</div>
 	</div>
 	<div id="hor-scroll-button-hide"
-		data-bind="visible: !isShow(), click: showHide">
+		data-bind="click: showHide">
 		<div class="flex valign-center btn_showhide">
 			<i class="icon icon-01-searchmode"></i> <label
 				class="labelShowHideButton">#{i18n.getText('CCG001_21')}</label>
