--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
@@ -15,13 +15,11 @@
 }
 
 .contentkcp {
-	min-height: 350px;
 	padding-top: 8px !important;
 	padding-left: 10px !important;
 }
 
 .contentkcpWorkplace {
-	min-height: 475px;
 	padding-top: 8px !important;
 	padding-left: 10px !important;
 }
@@ -76,15 +74,12 @@
 }
 
 .btn_apply {
-	width: 100%;
-	height: 25px;
-	text-align: center;
+	width: 40px;
+	height: 100%;
 	background-color: #2ECC71;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	margin-top: 5px;
-	margin-bottom: 5px;
 	color: white;
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
 	display: inline-block;
 	cursor: pointer;
 }
@@ -156,36 +151,26 @@
 	margin-left: 20px;
 }
 
-.ccg_tab_content_2 {
-	overflow-y: scroll;
-	height: 600px;
-}
-
-.ccg_tab_content_1 {
-	height: 600px;
-}
-
 .ccg-tabpanel #tab-1 {
+	height: calc(100% - 80px);
 	background-color: white;
 }
 
 .ccg-tabpanel #tab-2 {
+	height: calc(100% - 80px);
 	background-color: white;
 	padding-right: 5px;
 }
 
 #ccg-component {
+	height: calc(100% - 200px);
 	z-index: 999;
-	position: absolute;
-}
-
-#hor-scroll-button-show {
-	margin-top: 180px;
+	position: fixed;
 }
 
 #hor-scroll-button-hide {
 	z-index: 998;
-	position: absolute;
+	position: fixed;
 	margin-top: 180px;
 }
 
@@ -204,7 +189,7 @@
 	width: 25px;
 	height: 25px;
 	background-size: 25px 25px;
-	margin-top: 0px;
+	margin-top: 50px;
 	margin-right: 10px;
 	cursor: pointer;
 }
@@ -239,10 +224,15 @@
 }
 
 .lbl-apply {
+	height: 100%;
 	font-size: 16px;
-	margin-top: 1px;
+	margin-top: 20px;
 	cursor: pointer;
 	vertical-align: super;
+	line-height: 38px;
+	writing-mode: vertical-lr;
+	-ms-writing-mode: tb-lr;
+	text-orientation: upright;
 }
 
 .ccg-tabpanel #nts-component-list {
@@ -252,8 +242,15 @@
 #employeeinfo {
 	margin-top: 30px;
 }
+#tbl-ccg001-tab2 {
+	height: 100%;
+}
+#tbl-ccg001-tab2 td{
+	vertical-align: top;
+}
 
 .ccg-tabpanel {
+	height: calc(100% - 80px);
 	background-color: #F2F2F2;
 	border-radius: 5px;
 }
