--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/015/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/015/a/index.xhtml
@@ -40,7 +40,7 @@
 			</div>
 			<div id="contents-area" data-bind="visible: true"
 				style="display: none">
-				<table>
+				<table style="margin: 20px 0px 0px 20px">
 					<tr>
 						<td id="contents-left"
 							class="bg-green caret-right caret-background"><i
