--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/c/index.xhtml
@@ -84,7 +84,8 @@
 											optionsValue: 'titleCode',
 											columns: columns,
 											enable: enableGrid,
-											value: currentTitleMenu}">
+											value: currentTitleMenu,
+											rows: 8}">
 								</table>
 							</div>
 						</td>
