fix Bug ST KCP009 #87092

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/009/kcp009.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/009/kcp009.xhtml
@@ -32,7 +32,7 @@
 					</td>
 					<td class="none_border em_display employment-tdpad">
 						<div class="over_text">
-							<span data-bind="text: empBusinessName"></span>
+							<span class="limited-label" data-bind="text: empBusinessName"></span>
 						</div>
 					</td>
 					<td class="none_border employment-tdpad"><div
@@ -57,7 +57,7 @@
 						</div>
 					</td>
 					<td class="employment-tdpad border-right" id="wkp_text" data-bind="visible: isDisplayOrganizationName"><div>
-							<span data-bind="text: organizationName"></span>
+							<span class ="limited-label" data-bind="text: organizationName"></span>
 						</div></td>
 				</tr>
 			</table>
