--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/009/style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/009/style.css
@@ -16,6 +16,7 @@
 
 #wkp_title_text {
 	width: 50px;
+	text-align: center;
 }
 
 #wkp_text {
@@ -62,8 +63,8 @@ td.employment-tdpad{
 	padding: 3px 5px 3px 5px;
 }
 .over_text{
-	overflow: auto;
-	height: 20px;
+	/* overflow: auto; */
+	width: 120px;
 }
 #search-input{
 	width: 100px;
