KCP009: fix Bug ST #87092

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/009/kcp009.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/009/kcp009.xhtml
@@ -56,7 +56,8 @@
 							<span data-bind="text: organizationDesignation"></span>
 						</div>
 					</td>
-					<td class="employment-tdpad border-right" id="wkp_text" data-bind="visible: isDisplayOrganizationName"><div>
+					<td class="employment-tdpad border-right" id="wkp_text" data-bind="visible: isDisplayOrganizationName">
+						<div style="width: 150px">
 							<span class ="limited-label" data-bind="text: organizationName"></span>
 						</div></td>
 				</tr>
