CCG015: clear css thua

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/015/a/ccg015.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/015/a/ccg015.a.style.css
@@ -1,7 +1,7 @@
-.divHeader {
+/* .divHeader {
 	padding-left : 30px !important;
 	min-width: 1200px;
-}
+} */
 
 .tr360 {
 	width: 360px !important;
