--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
@@ -327,7 +327,7 @@
 			</div>
 		</div>
 		<!--定型理由 -->
-		<div class="valign-center control-group"
+		<div class="valign-center control-group overlay-reason"
 			data-bind="if: typicalReasonDisplayFlg">
 			<!--A9_1 定型理由ラベル--> 			
 			<div class="lblTitle cm-column" data-bind="ntsFormLabel:{}">#{i18n.getText('KAF005_86')}</div>
@@ -362,7 +362,7 @@
 			</div>
 		</div>
 		<!--定型理由 -->
-		<div class="valign-center control-group"
+		<div class="valign-center control-group overlay-reason"
 			data-bind="if: displayDivergenceReasonForm">
 			<!--A9_5 乖離定型理由ラベル--> 
 			<div class="lblTitle cm-column" data-bind="ntsFormLabel:{}">#{i18n.getText('KAF005_90')}</div>
