- Fix scroll bug - Change highlight color

--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_extable.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_extable.scss
@@ -25,7 +25,7 @@
 	background-color: #CCC;
 }
 .extable div.highlight, .extable td.highlight, .xheader td.highlight {
-	background-color: aqua;
+	background-color: #FFFFCC;
 }
 .extable td.ex-round-go {
 	cursor: pointer;
