--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
@@ -4249,7 +4249,7 @@ button.nts-switch-button[disabled]:hover {
 
 /* line 27, ../sass/components/_extable.scss */
 .extable div.highlight, .extable td.highlight, .xheader td.highlight {
-  background-color: aqua;
+  background-color: #FFFFCC;
 }
 
 /* line 30, ../sass/components/_extable.scss */
