--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/005/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/005/a/index.xhtml
@@ -48,7 +48,7 @@
 						<!-- A1_005 -->
 						<button tabindex="5" data-bind="click : openDialogB , enable : isCopy	 ">#{i18n.getText('CAS005_14')}</button>
 						<!-- A1_006 -->
-						<span style="float: right; margin-top: 7px;">#{i18n.getText('CAS005_15')}</span>
+						<!-- <span style="float: right; margin-top: 7px;">#{i18n.getText('CAS005_15')}</span> -->
 					</div>
 				</div>
 				<div id="contents-area">
