--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
@@ -10,6 +10,7 @@
 			<script>var dialogSize = { width: 1200, height: 800 };</script>
 			<com:scriptfile set="IGNITE" />
 			<com:stylefile path="kaf022.a.main.css" />
+			<com:stylefile path="../l/kaf022.l.main.css" />
 			<!-- <com:stylefile path="../e/kmf004.e.main.css" /> -->
 			
 			<com:scriptfile path="kaf022.a.vm.js" />
@@ -17,7 +18,8 @@
 			<com:scriptfile path="kaf022.a.start.js" />
 			<com:scriptfile path="../m/kaf022.m.vm.js" /> 
 			<com:scriptfile path="../l/kaf022.l.vm.js" />
-			 
+			
+			<com:scriptfile path="/view/kcp/share/list.js" of="/nts.uk.com.web"/>
 			<!-- <com:scriptfile path="../e/kmf004.e.vm.js" /> 
  			<com:scriptfile path="../e/kmf004.e.service.js" />  -->
 		</ui:define>
@@ -2031,7 +2033,7 @@
 
 				</div>
 			</div>
-			<div id="tabpanel-l" role="tabpanel" class="screen-l" data-bind="">
+			<div id="tabpanel-l" role="tabpanel" class="screen-l" data-bind="with: viewModelL">
 				<ui:include src="../l/index.xhtml" />
 			</div>
 			<div id="tabpanel-m" role="tabpanel" class="screen-m" data-bind="">
