--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/l/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/l/index.xhtml
@@ -1,3 +1,265 @@
-<div class="contents-area">
-	
+<div class="contents-area block-style">
+	<div id="left-content">
+		<div id="empt-list-setting"></div>
+	</div>
+	<div id="right-content">
+		<div data-bind="ntsFormLabel: {}">#{i18n.getText('KAF022_276',['#Com_Employment'])}</div>
+		<div class="ui-iggrid">
+			<table class="fixed-table kaf022l nts-fixed-table cf">
+				<colgroup>
+					<col width="350px" />
+					<col width="450px" />
+				</colgroup>
+				<thead>
+					<tr>
+						<th class="color-header" >#{i18n.getText('KAF022_242')}</th>
+						<th class="color-header" >#{i18n.getText('KAF022_243')}</th>
+					</tr>
+				</thead>
+				<tbody>
+					<!-- 残業申請 -->
+					<tr>
+						<td>
+							<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_3')}</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<!-- 休暇申請 -->
+					<tr>
+						<td><div>#{i18n.getText('KAF022_4')}</div></td>
+						<td></td>
+					</tr>				
+					<tr>
+						<td>
+							<div class="block-style">
+								<!--L8 　　　　【年次有休】--> 
+								<div class="margin-left-style" data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_47')}</div>
+								<!--L9 利用しない-->
+								<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_101')}</div>
+							</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<div class="block-style">
+								<!--L10 　　　　【代休】--> 
+								<div class="margin-left-style" data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_48')}</div>
+								<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_101')}</div>
+							</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<div class="block-style">
+								<!--L12 　　　　【欠勤】--> 
+								<div class="margin-left-style" data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_49')}</div>
+								<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_101')}</div>
+							</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<div class="block-style">
+								<!--L14 　　　　【特別休暇】--> 
+								<div class="margin-left-style" data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_50')}</div>
+								<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_101')}</div>
+							</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<div class="block-style">
+								<!--L16 　　　　【積立年休】--> 
+								<div class="margin-left-style" data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_51')}</div>
+								<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_101')}</div>
+							</div>	
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<div class="block-style">
+								<!--L18 　　　　【休日】--> 
+								<div class="margin-left-style" data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_52')}</div>
+								<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_101')}</div>
+							</div>	
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<div class="block-style">
+								<!--L20 　　　　【時間消化】--> 
+								<div class="margin-left-style" data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_53')}</div>
+								<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_101')}</div>
+							</div>	
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<div class="block-style">
+								<!--L22 　　　　【振休】--> 
+								<div class="margin-left-style" data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_54')}</div>
+								<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_101')}</div>
+							</div>	
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<!--L24 勤務変更申請--> 
+					<tr>
+						<td>
+							<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_5')}</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<!--L25 出張申請--> 
+					<tr>
+						<td>
+							<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_6')}</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<!--L26 直行直帰申請--> 
+					<tr>
+						<td>
+							<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_7')}</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<!--L27 休出時間申請--> 
+					<tr>
+						<td>
+							<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_8')}</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<!--L28 時間年休申請--> 
+					<tr>
+						<td>
+							<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_9')}</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<!--L29 遅刻早退取消申請--> 
+					<tr>
+						<td>
+							<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_10')}</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<!--L30 打刻申請--> 
+					<tr>
+						<td>
+							<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_11')}</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<!--L31 打刻申請（NR形式）--> 
+					<tr>
+						<td>
+							<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_55')}</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<!--L32 振休振出申請--> 
+					<tr>
+						<td><div>#{i18n.getText('KAF022_12')}</div></td>
+						<td></td>
+					</tr>	
+					<tr>
+						<td>
+							<div class="block-style">
+								<!--L33 　　　　【振出】--> 
+								<div class="margin-left-style" data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_279')}</div>
+								<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_101')}</div>
+							</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<div class="block-style">
+								<!--L34 　　　　【振休】--> 
+								<div class="margin-left-style" data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_54')}</div>
+								<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_101')}</div>
+							</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>
+					<!--L35 ３６協定時間申請-->
+					<tr>
+						<td>
+							<div data-bind="ntsCheckBox: {enable: true }">#{i18n.getText('KAF022_13')}</div>
+						</td>
+						<td>
+							<button class="small" data-bind="">#{i18n.getText('KAF022_280')}</button>
+							<input class="lagre-input-code" data-bind="ntsTextEditor: {value: textValue, enable: true, readonly: true}" />
+						</td>
+					</tr>	
+				</tbody>
+			</table>
+		</div>
+	</div>
 </div>
