--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/013/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/013/a/index.xhtml
@@ -24,6 +24,8 @@
 					data-bind="click: save, enable: $root.errors.isEmpty">#{i18n.getText('CAS013_5')}</button>
 				<button class="danger" tabindex="3"
 					data-bind="click: Delete, enable: isDelete() &amp;&amp; $root.errors.isEmpty">#{i18n.getText('CAS013_6')}</button>
+					
+				<p class="halign-right">#{i18n.getText('CAS013_1')}</p>	
 			</div>
 			<div id="contents-area">
 				<div class="container">
