--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/008/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/008/a/index.xhtml
@@ -90,6 +90,7 @@
 											<input id="A_INP_CODE" style="width: 80px"
 												data-bind="ntsTextEditor: {
 															value: code,
+															name: '#[CPS008_12]',
 															constraint: 'LayoutCode',
 															required:true,
 															enable: $parent.layout().id() == undefined }" />
@@ -99,6 +100,7 @@
 											<input id="A_INP_NAME" style="width: 180px"
 												data-bind="ntsTextEditor: {
 															value: name,
+															name: '#[CPS008_13]',
 															constraint: 'LayoutName',
 															required:true,
 															enable: true
