Update KAL004 tab2

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
@@ -12,6 +12,7 @@
 				nts.uk.ctx.at.function.dom.alarm.AlarmPatternName
             </com:ValidatorScript>
             <com:EnumScript>
+            	nts.uk.ctx.at.function.dom.alarm.extractionrange.PreviousClassification
 				nts.uk.ctx.at.function.dom.alarm.extractionrange.daily.SpecifiedMonth
 				nts.uk.ctx.at.function.dom.alarm.AlarmCategory
 			</com:EnumScript>
