--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/b/index.xhtml
@@ -14,6 +14,7 @@
 			<script>var dialogSize = { width: 750, height: 500 };</script>
 			<com:EnumScript>
 				nts.uk.ctx.at.function.dom.alarm.extractionrange.daily.SpecifiedMonth
+				nts.uk.ctx.at.function.dom.alarm.extractionrange.PreviousClassification
 			</com:EnumScript>
 			<com:stylefile path="kal004.b.style.css" />
 			<com:scriptfile path="kal004.b.service.js" />
@@ -33,20 +34,35 @@
 						<div class="day">
 							<span class="ntsControl">
 								<label class="ntsRadioBox">
-									<input type="radio" name="strRadio" data-bind="checkedValue: 0, checked: strSelected, enable: enable" />
+									<input type="radio" name="strRadio" tabindex="1" data-bind="checkedValue: 0, checked: strSelected, enable: enable" />
 									<span class="box"></span><span class="label" data-bind="text: txtDay"></span>
-									<input class="input-box input-str" data-bind="ntsNumberEditor: {value:strDay, constraint:'Day', required: true, enable: (strSelected() == 0)}" />
-									<span class="label">#{i18n.getText('KAL004_34')}</span> 
-									<span class="label">#{i18n.getText('KAL004_35')}</span>
+									<input class="input-box input-str" tabindex="2" data-bind="ntsNumberEditor: {value:strDay, constraint:'Day', required: true, enable: (strSelected() == 0)}" />
+									<span class="label txt">#{i18n.getText('KAL004_34')}</span> 
+									<com:ko-if bind="getCategoryId() == 0 || getCategoryId() == 8">
+									 	<div class="combo-box combo-day" tabindex="8"
+											data-bind="ntsComboBox: {
+											options: strComboDay,
+											optionsValue: 'value',
+											value: strPreviousDay,
+											optionsText: 'name',
+											visibleItemsCount: 2,
+											enable: (strSelected() == 0),
+											columns: [
+												{ prop: 'name', length: 1 }
+											]}"></div>
+								 	</com:ko-if>
+								 	<com:ko-if bind="getCategoryId() == 5 || getCategoryId() == 13">
+									 	<span class="label txt">#{i18n.getText('KAL004_35')}</span>
+								 	</com:ko-if>
 								</label>
 							</span>
 						</div>
 						<div class="month">
 							<span class="ntsControl">
 								<label class="ntsRadioBox">
-									<input type="radio" name="strRadio" data-bind="checkedValue: 1, checked: strSelected, enable: enable" />
+									<input type="radio" name="strRadio" tabindex="3" data-bind="checkedValue: 1, checked: strSelected, enable: enable" />
 									<span class="box"></span><span class="label" data-bind=""></span>
-									<div class="combo-box" tabindex="2" data-bind="ntsComboBox: {
+									<div class="combo-box" tabindex="4" data-bind="ntsComboBox: {
 										options: strComboMonth,
 										optionsValue: 'value',
 										value: strMonth,
@@ -67,20 +83,35 @@
 						<div class="day">
 							<span class="ntsControl">
 								<label class="ntsRadioBox">
-									<input type="radio" name="endRadio" data-bind="checkedValue: 0, checked: endSelected, enable: enable" />
+									<input type="radio" name="endRadio" tabindex="5" data-bind="checkedValue: 0, checked: endSelected, enable: enable" />
 									<span class="box"></span><span class="label" data-bind="text: txtDay"></span>
-									<input class="input-box input-end" data-bind="ntsNumberEditor: {value:endDay, constraint:'Day', required: true, enable: (endSelected() == 0)}" />
-									<span class="label">#{i18n.getText('KAL004_34')}</span> 
-									<span class="label">#{i18n.getText('KAL004_35')}</span>
+									<input class="input-box input-end" tabindex="6" data-bind="ntsNumberEditor: {value:endDay, constraint:'Day', required: true, enable: (endSelected() == 0)}" />
+									<span class="label txt">#{i18n.getText('KAL004_34')}</span> 
+									<com:ko-if bind="getCategoryId() == 0 || getCategoryId() == 8">
+									 	<div class="combo-box combo-day" tabindex="8"
+											data-bind="ntsComboBox: {
+											options: endComboDay,
+											optionsValue: 'value',
+											value: endPreviousDay,
+											optionsText: 'name',
+											visibleItemsCount: 2,
+											enable: (endSelected() == 0),
+											columns: [
+												{ prop: 'name', length: 1 }
+											]}"></div>
+								 	</com:ko-if>
+								 	<com:ko-if bind="getCategoryId() == 5 || getCategoryId() == 13">
+									 	<span class="label txt">#{i18n.getText('KAL004_35')}</span>
+								 	</com:ko-if>
 								</label>
 							</span>
 						</div>
 						<div class="month">
 							<span class="ntsControl">
 								<label class="ntsRadioBox">
-									<input type="radio" name="endRadio" data-bind="checkedValue: 1, checked: endSelected, enable: strSelected() == 1 " />
+									<input type="radio" name="endRadio" tabindex="7" data-bind="checkedValue: 1, checked: endSelected, enable: strSelected() == 1 " />
 									<span class="box"></span><span class="label" data-bind=""></span>
-									<div class="combo-box" tabindex="1"
+									<div class="combo-box" tabindex="8"
 										data-bind="ntsComboBox: {
 										options: endComboMonth,
 										optionsValue: 'value',
@@ -99,8 +130,8 @@
 				</div>
 			</div>
 			<div id="functions-area-bottom">
-				<button data-bind="click :Decide">#{i18n.getText('KAL003_45')}</button>
-				<button data-bind="click :cancel_Dialog">#{i18n.getText('KAL003_46')}</button>
+				<button tabindex="9" data-bind="click :Decide">#{i18n.getText('KAL003_45')}</button>
+				<button tabindex="10" data-bind="click :cancel_Dialog">#{i18n.getText('KAL003_46')}</button>
 			</div>
 		</ui:define>
 	</ui:composition>
