[KDL003] fix KDL003

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/a/index.xhtml
@@ -26,8 +26,8 @@
 		<ui:define name="content">
 			<div id="">
 					<div style="margin-bottom: 10px; margin-left: 10px;">#{i18n.getText('KDL003_2')}</div>
-					<div style="border: 0.5px solid; border-radius: 12px; padding-top: 15px; 
-						margin-left: 10px; margin-right: 10px;" class="caret-bottom kdl003-border">
+					<!--  <div style="border: 0.5px solid; border-radius: 12px; padding-top: 15px; 
+						margin-left: 10px; margin-right: 10px;" class="caret-bottom kdl003-border">-->
 					<div style="margin-left: 10px;">
 						<table style="margin-bottom: 10px;">
 							<tr>
@@ -83,14 +83,14 @@
 						</table>
 					</div>
 					
-					</div>
+					<!-- </div>
 					<div style="margin-left: 10px; margin-top: 30px;">
 						<table style="margin-bottom: 10px;">
-							<tr>
+							 <tr>
 								<td><div data-bind="ntsFormLabel: {}">#{i18n.getText('KDL003_24')}</div></td>
 								<td><div data-bind="ntsFormLabel: {}">#{i18n.getText('KDL003_32')}</div></td>
 								<td><div data-bind="ntsFormLabel: {}">#{i18n.getText('KDL003_35')}</div></td>
-							</tr>
+							</tr> 
 							<tr>
 								<td style="padding-right: 20px"><hr/></td>
 								<td><hr/></td>
@@ -162,10 +162,10 @@
 											value: currentCode4}">
 										</table>
 									</div>
-								</td>
+								</td> 
 							</tr>
 						</table>
-					</div>
+					</div>-->
 				</div>
 			<div id="functions-area-bottom" style="position: inherit !important;">
 				<button class="x-large proceed" tabindex="11"
