--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/demo/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/demo/index.xhtml
@@ -68,6 +68,12 @@
 				
 				<div> Selected Work Time Name:</div>
 				<span data-bind="text: childSelectSiftName"></span>
+				
+				<div> First Time Zone:</div>
+				<span data-bind="text: firstTime"></span>
+				
+				<div> Second Time Zone:</div>
+				<span data-bind="text: secondTime"></span>
 			</div>
 		</ui:define>
 	</ui:composition>
