Fix tab 6 Flow mode

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a6/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a6/index.xhtml
@@ -17,7 +17,7 @@
 			<div tabindex="89" id="tab6_fixtable_difftime" data-bind="ntsFixTableCustom: {option: fixTableOptionDiffTime}"></div>
 		</com:ko>
 	</com:ko>
-	<!-- <com:ko tag="if" bind="isFlowMode">
+	<com:ko tag="if" bind="isFlowMode">
 		<div tabindex="90" id="tab6_fixtable_flow" data-bind="ntsFixTableCustom: {option: fixTableOptionFlow}"></div>
-	</com:ko> -->
+	</com:ko>
 </ui:composition>
