KSM011 - A: Update view

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/main.css
@@ -193,3 +193,9 @@ button.nts-switch-button {
 	float: left;
 	margin: 10px 8px;
 }
+
+.hyperlink-disable {
+    color: #7f7f7f;
+    text-decoration: underline;
+    cursor: pointer;
+}
